<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- Thêm ScrollView vào đây -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_employee" />

                    <TextView
                        android:id="@+id/txtEmployee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_employee"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_customer" />

                    <TextView
                        android:id="@+id/txtCustomer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_customer"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_order" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_order"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_product" />

                    <TextView
                        android:id="@+id/txtProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_Product"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_payment" />

                    <TextView
                        android:id="@+id/txtPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_payment"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="203dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/ic_feedback" />

                    <TextView
                        android:id="@+id/txtFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_feedback"
                        android:textAlignment="center"
                        android:textColor="#0B0A0A"
                        android:textSize="24sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
